--- a/backend/package.json
+++ b/backend/package.json
@@ -26,13 +26,15 @@
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "concurrently": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
+    "firebase-admin": "^12.6.0"
   }
 }
