Correção da landing

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,3 +5,6 @@ consulta-medicos-online-FIREBASE_CREDENTIALS_FILE.json
 API_TESTE_MEDICOSCONSULTASONLINE.txt
 FIREBASE_CREDENTIALS_FILE.json
 backend/FIREBASE_CREDENTIALS_FILE.json
+
+
+como dar uma ROLADA na cara do seu amigo?
