--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,11 @@
     "socket.io-client": "^4.6.0",
     "react-input-mask": "^2.0.4",
     "sonner": "^1.2.3",
-    "next-themes": "^0.2.1"
+    "next-themes": "^0.2.1",
+    "@radix-ui/react-accordion": "1.2.2",
+    "@radix-ui/react-dialog": "1.1.4",
+    "class-variance-authority": "^0.7.1",
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
