--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,38 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next": "14.0.4",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
-    "@tanstack/react-query": "^5.14.2",
-    "react-hook-form": "^7.49.2",
-    "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.2",
-    "date-fns": "^3.0.6",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.298.0",
-    "framer-motion": "^10.16.16",
-    "socket.io-client": "^4.6.0",
-    "react-input-mask": "^2.0.4",
-    "sonner": "^1.2.3",
-    "next-themes": "^0.2.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-dialog": "1.1.4",
+    "@tanstack/react-query": "^5.14.2",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.1",
-    "tailwind-merge": "^2.5.5"
+    "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.298.0",
+    "next": "^14.2.33",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-input-mask": "^2.0.4",
+    "socket.io-client": "^4.6.0",
+    "sonner": "^1.2.3",
+    "tailwind-merge": "^2.5.5",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5.3.3"
   }
 }
