--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^3.0.6",
     "firebase": "^12.6.0",
     "framer-motion": "^10.16.16",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.298.0",
     "next": "^14.2.33",
     "next-themes": "^0.2.1",
