--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,21 @@
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-dialog": "1.1.4",
     "@tanstack/react-query": "^5.14.2",
+    "apexcharts": "^5.3.6",
     "axios": "^1.6.2",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
     "firebase": "^12.6.0",
     "framer-motion": "^10.16.16",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.298.0",
     "next": "^14.2.33",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.8.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-input-mask": "^2.0.4",
