--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,44 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-aspect-ratio": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.14.2",
     "apexcharts": "^5.3.6",
     "axios": "^1.6.2",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.0.6",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
     "framer-motion": "^10.16.16",
+    "input-otp": "^1.4.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.298.0",
     "next": "^14.2.33",
@@ -28,12 +56,16 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.8.0",
     "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-input-mask": "^2.0.4",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "^3.4.1",
     "socket.io-client": "^4.6.0",
     "sonner": "^1.2.3",
     "tailwind-merge": "^2.5.5",
+    "vaul": "^1.1.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
