feat: adicionar plano avulso fixo com opções de agendamento via WhatsApp

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,4 @@ NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBYZ4KXIrgtjc7AgSsUhKcM27Wel9ytQ_0
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=consulta-medicos-online.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=consulta-medicos-online
 NEXT_PUBLIC_FIREBASE_APP_ID=1:404572787857:web:49a4643a2160cc13ae5b30
+NEXT_PUBLIC_WHATSAPP_NUMBER=5541999999999
